--- a/OOSU2Laboration2/Presentationslager/PresentationLayer.csproj
+++ b/OOSU2Laboration2/Presentationslager/PresentationLayer.csproj
@@ -80,9 +80,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Business layer\Business layer.csproj">
-      <Project>{9111bb01-5698-48d2-90e7-74ead860dddc}</Project>
-      <Name>Business layer</Name>
+    <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj">
+      <Project>{68739080-86b1-42e2-a69b-709f489d291a}</Project>
+      <Name>BusinessLayer</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
