--- a/OOSU2Laboration2/Presentationslager/PresentationLayer.csproj
+++ b/OOSU2Laboration2/Presentationslager/PresentationLayer.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BorttagningAvBokning.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BorttagningAvBokning.Designer.cs">
+      <DependentUpon>BorttagningAvBokning.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
