--- a/OOSU2Laboration2/Presentationslager/PresentationLayer.csproj
+++ b/OOSU2Laboration2/Presentationslager/PresentationLayer.csproj
@@ -58,11 +58,11 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Bokning.cs">
+    <Compile Include="SkapaBokning.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Bokning.Designer.cs">
-      <DependentUpon>Bokning.cs</DependentUpon>
+    <Compile Include="SkapaBokning.Designer.cs">
+      <DependentUpon>SkapaBokning.cs</DependentUpon>
     </Compile>
     <Compile Include="Meny.cs">
       <SubType>Form</SubType>
@@ -72,11 +72,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="BorttagningAvBokning.resx">
+      <DependentUpon>BorttagningAvBokning.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Bokning.resx">
-      <DependentUpon>Bokning.cs</DependentUpon>
+    <EmbeddedResource Include="SkapaBokning.resx">
+      <DependentUpon>SkapaBokning.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Meny.resx">
       <DependentUpon>Meny.cs</DependentUpon>
