--- a/OOSU2Laboration2/Presentationslager/PresentationLayer.csproj
+++ b/OOSU2Laboration2/Presentationslager/PresentationLayer.csproj
@@ -72,6 +72,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ÅterlämningAvBöcker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ÅterlämningAvBöcker.Designer.cs">
+      <DependentUpon>ÅterlämningAvBöcker.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BorttagningAvBokning.resx">
       <DependentUpon>BorttagningAvBokning.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,6 +99,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ÅterlämningAvBöcker.resx">
+      <DependentUpon>ÅterlämningAvBöcker.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
