--- a/OOSU2Laboration2/BusinessLayer/BusinessLayer.csproj
+++ b/OOSU2Laboration2/BusinessLayer/BusinessLayer.csproj
@@ -55,5 +55,8 @@
     <Compile Include="Medlem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
